--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 <h2 class="title is-3 has-text-centered">Examples</h2>
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
+    <div class="container is-max-desktop">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <img src="static/images/example1.png" alt="MY ALT TEXT"/>
@@ -428,17 +428,19 @@
 </div>
 </section>
 
-<section class="section hero is-light">
+<section class="section hero is-white">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Dataset Composition</h2>
         <div class="content">
-          <img src="static/images/piechartv3.jpg" alt="MY ALT TEXT"/>
-          <p class="has-text-left">Categories and examples of AlignMMBench. The chart on the left displays the categories
+          <img src="static/images/index.png" alt="MY ALT TEXT"/>
+          <p class="has-text-left">
+            (Left) Categories and examples of AlignMMBench. The chart on the left displays the categories
             of AlignMMBench, encompassing <b>three</b> main categories and <b>thirteen</b> specific tasks. The numbers
-            below each category or task indicate the total number of images included. The right side of the pie
-            chart presents two examples, illustrating instances from the incoherence and coherence categories.</p>
+            below each category or task indicate the total number of images included. </p>
+            <p class="has-text-left">(Right) Radar chart of leaderboard results.
+          </p>
         </div>
       </div>
     </div>
@@ -458,7 +460,7 @@
   </div>
 </section>
 
-<section class="section hero is-light">
+<section class="section hero is-white">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
