--- a/index.html
+++ b/index.html
@@ -196,219 +196,279 @@
 <!-- End paper abstract -->
 
 
-
-
 <!-- Leaderboard-->
+
 <section class="section" id="leaderboard">
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-full">
         <h2 class="title is-3">Leaderboard</h2>
         <div class="content">
-          Evaluation results on AlignMMBench.
+          <p>Evaluation results on AlignMMBench. The "Ref." column indicates the relative ranking of these models on  <a href="https://rank.opencompass.org.cn/leaderboard-multimodal">opencompass</a>, dominated by primarily English benchmarks.</p>
           <div class="mdui-table-fluid">
             <table class="mdui-table mdui-table-hoverable"><thead>
-              <tr>
-                <th rowspan="2">Models</th>
-                <th rowspan="2">Avg</th>
-                <th colspan="6">Perception &amp; Understanding.</th>
-                <th colspan="5">Reasoning &amp; Analysis</th>
-                <th colspan="2">Context</th>
-              </tr>
-              <tr>
-                <th>Des.</th>
-                <th>Rec.</th>
-                <th>Cou.</th>
-                <th>OCR.</th>
-                <th>Mem.</th>
-                <th>Kno.</th>
-                <th>Rea.</th>
-                <th>Cha.</th>
-                <th>Pro.</th>
-                <th>Com.</th>
-                <th>Wri.</th>
-                <th>Coh.</th>
-                <th>Inc.</th>
-              </tr></thead>
-            <tbody>
-              <tr>
-                <td>GPT-4o</td>
-                <td><b>6.57</b</td>
-                <td><b>7.69</b></td>
-                <td><b>6.56</b></td>
-                <td><b>6.18</b></td>
-                <td><b>7.4</b></td>
-                <td><b>7.02</b></td>
-                <td><b>6.58</b></td>
-                <td><b>4.13</b></td>
-                <td><b>6.94</b></td>
-                <td><b>5.85</b></td>
-                <td><b>7.09</b></td>
-                <td><b>7.81</b></td>
-                <td><u>6.63</u></td>
-                <td><b>5.5</b></td>
-              </tr>
-              <tr>
-                <td>CogVLM2</td>
-                <td><u>5.86</u></td>
-                <td>7.19</td>
-                <td><u>6.11</u></td>
-                <td><u>5.81</u></td>
-                <td><u>7.03</u></td>
-                <td><u>5.83</u></td>
-                <td><u>5.82</u></td>
-                <td><u>3.57</u></td>
-                <td>5.79</td>
-                <td><u>4.44</u></td>
-                <td>5.65</td>
-                <td><u>7.38</u></td>
-                <td>6.38</td>
-                <td><u>5.22</u></td>
-              </tr>
-              <tr>
-                <td>InternVL-V1.5</td>
-                <td>5.73</td>
-                <td><u>7.21</u></td>
-                <td>6.04</td>
-                <td>5.52</td>
-                <td>6.64</td>
-                <td>4.96</td>
-                <td>5.06</td>
-                <td>3.34</td>
-                <td><u>6.02</u></td>
-                <td>4.22</td>
-                <td><u>6.41</u></td>
-                <td>7.28</td>
-                <td><b>6.70</b></td>
-                <td>5.07</td>
-              </tr>
-              <tr>
-                <td>MiniCPM-V2.5</td>
-                <td>5.43</td>
-                <td>7.15</td>
-                <td>5.32</td>
-                <td>5.38</td>
-                <td>6.24</td>
-                <td>4.55</td>
-                <td>5.32</td>
-                <td>3.27</td>
-                <td>4.78</td>
-                <td>3.66</td>
-                <td>6.06</td>
-                <td>7.34</td>
-                <td>6.38</td>
-                <td>5.11</td>
-              </tr>
-              <tr>
-                <td>Qwen-VL-Chat</td>
-                <td>5.13</td>
-                <td>6.43</td>
-                <td>5.86</td>
-                <td>5.43</td>
-                <td>4.77</td>
-                <td>5.22</td>
-                <td>5.65</td>
-                <td>2.90</td>
-                <td>4.15</td>
-                <td>3.03</td>
-                <td>5.52</td>
-                <td>7.24</td>
-                <td>6.04</td>
-                <td>4.46</td>
-              </tr>
-              <tr>
-                <td>XComposer2V</td>
-                <td>4.98</td>
-                <td>6.29</td>
-                <td>4.71</td>
-                <td>5.23</td>
-                <td>4.98</td>
-                <td>4.69</td>
-                <td>5.09</td>
-                <td>3.14</td>
-                <td>4.43</td>
-                <td>3.37</td>
-                <td>4.81</td>
-                <td>7.17</td>
-                <td>6.19</td>
-                <td>4.67</td>
-              </tr>
-              <tr>
-                <td>DeepSeek-VL</td>
-                <td>4.75</td>
-                <td>6.52</td>
-                <td>5.52</td>
-                <td>5.14</td>
-                <td>3.95</td>
-                <td>3.92</td>
-                <td>4.18</td>
-                <td>2.46</td>
-                <td>3.98</td>
-                <td>2.61</td>
-                <td>5.47</td>
-                <td>7.16</td>
-                <td>6.17</td>
-                <td>4.63</td>
-              </tr>
-              <tr>
-                <td>Monkey-Chat</td>
-                <td>4.71</td>
-                <td>6.06</td>
-                <td>4.88</td>
-                <td>5.53</td>
-                <td>4.78</td>
-                <td>4.11</td>
-                <td>4.95</td>
-                <td>3.03</td>
-                <td>3.94</td>
-                <td>2.58</td>
-                <td>4.88</td>
-                <td>6.35</td>
-                <td>6.17</td>
-                <td>3.94</td>
-              </tr>
-              <tr>
-                <td>Yi-VL</td>
-                <td>4.24</td>
-                <td>4.84</td>
-                <td>4.74</td>
-                <td>5.21</td>
-                <td>3.28</td>
-                <td>3.57</td>
-                <td>4.47</td>
-                <td>2.46</td>
-                <td>3.27</td>
-                <td>2.04</td>
-                <td>4.72</td>
-                <td>6.62</td>
-                <td>5.71</td>
-                <td>4.16</td>
-              </tr>
-              <tr>
-                <td>Phi-3-Vision</td>
-                <td>3.90</td>
-                <td>3.99</td>
-                <td>3.49</td>
-                <td>4.49</td>
-                <td>3.87</td>
-                <td>3.34</td>
-                <td>3.25</td>
-                <td>2.32</td>
-                <td>4.36</td>
-                <td>2.54</td>
-                <td>4.05</td>
-                <td>4.78</td>
-                <td>5.78</td>
-                <td>4.42</td>
-              </tr>
-            </tbody></table>
+            <tr>
+              <th rowspan="3">Models</th>
+              <th rowspan="3">Ref.</th>
+              <th rowspan="3">Avg</th>
+              <th colspan="6">Perception &amp; Understanding.</th>
+              <th colspan="5">Reasoning &amp; Analysis</th>
+              <th colspan="2">Context</th>
+            </tr>
+            <tr>
+              <th>Des.</th>
+              <th>Rec.</th>
+              <th>Cou.</th>
+              <th>OCR.</th>
+              <th>Mem.</th>
+              <th>Kno.</th>
+              <th>Rea.</th>
+              <th>Cha.</th>
+              <th>Pro.</th>
+              <th>Com.</th>
+              <th>Wri.</th>
+              <th>Coh.</th>
+              <th>Inc.</th>
+            </tr>
+            <tr>
+              <th>7.69</th>
+              <th>6.56</th>
+              <th>6.18</th>
+              <th>7.4</th>
+              <th>7.02</th>
+              <th>6.58</th>
+              <th>4.13</th>
+              <th>6.94</th>
+              <th>5.85</th>
+              <th>7.09</th>
+              <th>7.81</th>
+              <th>6.63</th>
+              <th>5.5</th>
+            </tr></thead>
+          <tbody>
+            <tr>
+              <td>CogVLM2</td>
+              <td>5</td>
+              <td>5.86</td>
+              <td>7.19</td>
+              <td>6.11</td>
+              <td>5.81</td>
+              <td>7.03</td>
+              <td>5.83</td>
+              <td>5.82</td>
+              <td>3.57</td>
+              <td>5.79</td>
+              <td>4.44</td>
+              <td>5.65</td>
+              <td>7.38</td>
+              <td>6.38</td>
+              <td>5.22</td>
+            </tr>
+            <tr>
+              <td>InternVL-V1.5</td>
+              <td>2</td>
+              <td>5.73</td>
+              <td>7.21</td>
+              <td>6.04</td>
+              <td>5.52</td>
+              <td>6.64</td>
+              <td>4.96</td>
+              <td>5.06</td>
+              <td>3.34</td>
+              <td>6.02</td>
+              <td>4.22</td>
+              <td>6.41</td>
+              <td>7.28</td>
+              <td>6.70</td>
+              <td>5.07</td>
+            </tr>
+            <tr>
+              <td>MiniCPM-V2.5</td>
+              <td>3</td>
+              <td>5.43</td>
+              <td>7.15</td>
+              <td>5.32</td>
+              <td>5.38</td>
+              <td>6.24</td>
+              <td>4.55</td>
+              <td>5.32</td>
+              <td>3.27</td>
+              <td>4.78</td>
+              <td>3.66</td>
+              <td>6.06</td>
+              <td>7.34</td>
+              <td>6.38</td>
+              <td>5.11</td>
+            </tr>
+            <tr>
+              <td>Qwen-VL-Chat</td>
+              <td>8</td>
+              <td>5.13</td>
+              <td>6.43</td>
+              <td>5.86</td>
+              <td>5.43</td>
+              <td>4.77</td>
+              <td>5.22</td>
+              <td>5.65</td>
+              <td>2.90</td>
+              <td>4.15</td>
+              <td>3.03</td>
+              <td>5.52</td>
+              <td>7.24</td>
+              <td>6.04</td>
+              <td>4.46</td>
+            </tr>
+            <tr>
+              <td>XComposer2V</td>
+              <td>4</td>
+              <td>4.98</td>
+              <td>6.29</td>
+              <td>4.71</td>
+              <td>5.23</td>
+              <td>4.98</td>
+              <td>4.69</td>
+              <td>5.09</td>
+              <td>3.14</td>
+              <td>4.43</td>
+              <td>3.37</td>
+              <td>4.81</td>
+              <td>7.17</td>
+              <td>6.19</td>
+              <td>4.67</td>
+            </tr>
+            <tr>
+              <td>DeepSeek-VL</td>
+              <td>7</td>
+              <td>4.75</td>
+              <td>6.52</td>
+              <td>5.52</td>
+              <td>5.14</td>
+              <td>3.95</td>
+              <td>3.92</td>
+              <td>4.18</td>
+              <td>2.46</td>
+              <td>3.98</td>
+              <td>2.61</td>
+              <td>5.47</td>
+              <td>7.16</td>
+              <td>6.17</td>
+              <td>4.63</td>
+            </tr>
+            <tr>
+              <td>Monkey-Chat</td>
+              <td>6</td>
+              <td>4.71</td>
+              <td>6.06</td>
+              <td>4.88</td>
+              <td>5.53</td>
+              <td>4.78</td>
+              <td>4.11</td>
+              <td>4.95</td>
+              <td>3.03</td>
+              <td>3.94</td>
+              <td>2.58</td>
+              <td>4.88</td>
+              <td>6.35</td>
+              <td>6.17</td>
+              <td>3.94</td>
+            </tr>
+            <tr>
+              <td>ShareGPT4V</td>
+              <td>10</td>
+              <td>4.31</td>
+              <td>5.24</td>
+              <td>4.49</td>
+              <td>4.84</td>
+              <td>3.89</td>
+              <td>3.61</td>
+              <td>4.68</td>
+              <td>2.44</td>
+              <td>3.65</td>
+              <td>2.24</td>
+              <td>4.51</td>
+              <td>6.32</td>
+              <td>5.91</td>
+              <td>4.16</td>
+            </tr>
+            <tr>
+              <td>Yi-VL</td>
+              <td>9</td>
+              <td>4.24</td>
+              <td>4.84</td>
+              <td>4.74</td>
+              <td>5.21</td>
+              <td>3.28</td>
+              <td>3.57</td>
+              <td>4.47</td>
+              <td>2.46</td>
+              <td>3.27</td>
+              <td>2.04</td>
+              <td>4.72</td>
+              <td>6.62</td>
+              <td>5.71</td>
+              <td>4.16</td>
+            </tr>
+            <tr>
+              <td>LLava-v1.5</td>
+              <td>11</td>
+              <td>4.22</td>
+              <td>6.02</td>
+              <td>4.55</td>
+              <td>4.48</td>
+              <td>3.82</td>
+              <td>3.67</td>
+              <td>4.84</td>
+              <td>2.44</td>
+              <td>3.71</td>
+              <td>2.23</td>
+              <td>4.81</td>
+              <td>6.40</td>
+              <td>4.54</td>
+              <td>3.40</td>
+            </tr>
+            <tr>
+              <td>Phi-3-Vision</td>
+              <td>-</td>
+              <td>3.90</td>
+              <td>3.99</td>
+              <td>3.49</td>
+              <td>4.49</td>
+              <td>3.87</td>
+              <td>3.34</td>
+              <td>3.25</td>
+              <td>2.32</td>
+              <td>4.36</td>
+              <td>2.54</td>
+              <td>4.05</td>
+              <td>4.78</td>
+              <td>5.78</td>
+              <td>4.42</td>
+            </tr>
+            <tr>
+              <td>InstructBLIP</td>
+              <td>12</td>
+              <td>3.38</td>
+              <td>3.33</td>
+              <td>3.77</td>
+              <td>4.12</td>
+              <td>3.51</td>
+              <td>2.61</td>
+              <td>3.25</td>
+              <td>1.90</td>
+              <td>3.52</td>
+              <td>1.42</td>
+              <td>3.28</td>
+              <td>3.98</td>
+              <td>5.50</td>
+              <td>3.78</td>
+            </tr>
+          </tbody></table>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End Leaderboard -->
 
 
 <h2 class="title is-3 has-text-centered">Examples</h2>
