--- a/index.html
+++ b/index.html
@@ -207,262 +207,373 @@
           <p>Evaluation results on AlignMMBench. The "Ref." column indicates the relative ranking of these models on  <a href="https://rank.opencompass.org.cn/leaderboard-multimodal">opencompass</a>, dominated by primarily English benchmarks.</p>
           <div class="mdui-table-fluid">
             <table class="mdui-table mdui-table-hoverable"><thead>
-            <tr>
-              <th rowspan="3">Models</th>
-              <th rowspan="3">Ref.</th>
-              <th rowspan="3">Avg</th>
-              <th colspan="6">Perception &amp; Understanding.</th>
-              <th colspan="5">Reasoning &amp; Analysis</th>
-              <th colspan="2">Context</th>
-            </tr>
-            <tr>
-              <th>Des.</th>
-              <th>Rec.</th>
-              <th>Cou.</th>
-              <th>OCR.</th>
-              <th>Mem.</th>
-              <th>Kno.</th>
-              <th>Rea.</th>
-              <th>Cha.</th>
-              <th>Pro.</th>
-              <th>Com.</th>
-              <th>Wri.</th>
-              <th>Coh.</th>
-              <th>Inc.</th>
-            </tr>
-            <tr>
-              <th>7.69</th>
-              <th>6.56</th>
-              <th>6.18</th>
-              <th>7.4</th>
-              <th>7.02</th>
-              <th>6.58</th>
-              <th>4.13</th>
-              <th>6.94</th>
-              <th>5.85</th>
-              <th>7.09</th>
-              <th>7.81</th>
-              <th>6.63</th>
-              <th>5.5</th>
-            </tr></thead>
-          <tbody>
-            <tr>
-              <td>CogVLM2</td>
-              <td>5</td>
-              <td>5.86</td>
-              <td>7.19</td>
-              <td>6.11</td>
-              <td>5.81</td>
-              <td>7.03</td>
-              <td>5.83</td>
-              <td>5.82</td>
-              <td>3.57</td>
-              <td>5.79</td>
-              <td>4.44</td>
-              <td>5.65</td>
-              <td>7.38</td>
-              <td>6.38</td>
-              <td>5.22</td>
-            </tr>
-            <tr>
-              <td>InternVL-V1.5</td>
-              <td>2</td>
-              <td>5.73</td>
-              <td>7.21</td>
-              <td>6.04</td>
-              <td>5.52</td>
-              <td>6.64</td>
-              <td>4.96</td>
-              <td>5.06</td>
-              <td>3.34</td>
-              <td>6.02</td>
-              <td>4.22</td>
-              <td>6.41</td>
-              <td>7.28</td>
-              <td>6.70</td>
-              <td>5.07</td>
-            </tr>
-            <tr>
-              <td>MiniCPM-V2.5</td>
-              <td>3</td>
-              <td>5.43</td>
-              <td>7.15</td>
-              <td>5.32</td>
-              <td>5.38</td>
-              <td>6.24</td>
-              <td>4.55</td>
-              <td>5.32</td>
-              <td>3.27</td>
-              <td>4.78</td>
-              <td>3.66</td>
-              <td>6.06</td>
-              <td>7.34</td>
-              <td>6.38</td>
-              <td>5.11</td>
-            </tr>
-            <tr>
-              <td>Qwen-VL-Chat</td>
-              <td>8</td>
-              <td>5.13</td>
-              <td>6.43</td>
-              <td>5.86</td>
-              <td>5.43</td>
-              <td>4.77</td>
-              <td>5.22</td>
-              <td>5.65</td>
-              <td>2.90</td>
-              <td>4.15</td>
-              <td>3.03</td>
-              <td>5.52</td>
-              <td>7.24</td>
-              <td>6.04</td>
-              <td>4.46</td>
-            </tr>
-            <tr>
-              <td>XComposer2V</td>
-              <td>4</td>
-              <td>4.98</td>
-              <td>6.29</td>
-              <td>4.71</td>
-              <td>5.23</td>
-              <td>4.98</td>
-              <td>4.69</td>
-              <td>5.09</td>
-              <td>3.14</td>
-              <td>4.43</td>
-              <td>3.37</td>
-              <td>4.81</td>
-              <td>7.17</td>
-              <td>6.19</td>
-              <td>4.67</td>
-            </tr>
-            <tr>
-              <td>DeepSeek-VL</td>
-              <td>7</td>
-              <td>4.75</td>
-              <td>6.52</td>
-              <td>5.52</td>
-              <td>5.14</td>
-              <td>3.95</td>
-              <td>3.92</td>
-              <td>4.18</td>
-              <td>2.46</td>
-              <td>3.98</td>
-              <td>2.61</td>
-              <td>5.47</td>
-              <td>7.16</td>
-              <td>6.17</td>
-              <td>4.63</td>
-            </tr>
-            <tr>
-              <td>Monkey-Chat</td>
-              <td>6</td>
-              <td>4.71</td>
-              <td>6.06</td>
-              <td>4.88</td>
-              <td>5.53</td>
-              <td>4.78</td>
-              <td>4.11</td>
-              <td>4.95</td>
-              <td>3.03</td>
-              <td>3.94</td>
-              <td>2.58</td>
-              <td>4.88</td>
-              <td>6.35</td>
-              <td>6.17</td>
-              <td>3.94</td>
-            </tr>
-            <tr>
-              <td>ShareGPT4V</td>
-              <td>10</td>
-              <td>4.31</td>
-              <td>5.24</td>
-              <td>4.49</td>
-              <td>4.84</td>
-              <td>3.89</td>
-              <td>3.61</td>
-              <td>4.68</td>
-              <td>2.44</td>
-              <td>3.65</td>
-              <td>2.24</td>
-              <td>4.51</td>
-              <td>6.32</td>
-              <td>5.91</td>
-              <td>4.16</td>
-            </tr>
-            <tr>
-              <td>Yi-VL</td>
-              <td>9</td>
-              <td>4.24</td>
-              <td>4.84</td>
-              <td>4.74</td>
-              <td>5.21</td>
-              <td>3.28</td>
-              <td>3.57</td>
-              <td>4.47</td>
-              <td>2.46</td>
-              <td>3.27</td>
-              <td>2.04</td>
-              <td>4.72</td>
-              <td>6.62</td>
-              <td>5.71</td>
-              <td>4.16</td>
-            </tr>
-            <tr>
-              <td>LLava-v1.5</td>
-              <td>11</td>
-              <td>4.22</td>
-              <td>6.02</td>
-              <td>4.55</td>
-              <td>4.48</td>
-              <td>3.82</td>
-              <td>3.67</td>
-              <td>4.84</td>
-              <td>2.44</td>
-              <td>3.71</td>
-              <td>2.23</td>
-              <td>4.81</td>
-              <td>6.40</td>
-              <td>4.54</td>
-              <td>3.40</td>
-            </tr>
-            <tr>
-              <td>Phi-3-Vision</td>
-              <td>-</td>
-              <td>3.90</td>
-              <td>3.99</td>
-              <td>3.49</td>
-              <td>4.49</td>
-              <td>3.87</td>
-              <td>3.34</td>
-              <td>3.25</td>
-              <td>2.32</td>
-              <td>4.36</td>
-              <td>2.54</td>
-              <td>4.05</td>
-              <td>4.78</td>
-              <td>5.78</td>
-              <td>4.42</td>
-            </tr>
-            <tr>
-              <td>InstructBLIP</td>
-              <td>12</td>
-              <td>3.38</td>
-              <td>3.33</td>
-              <td>3.77</td>
-              <td>4.12</td>
-              <td>3.51</td>
-              <td>2.61</td>
-              <td>3.25</td>
-              <td>1.90</td>
-              <td>3.52</td>
-              <td>1.42</td>
-              <td>3.28</td>
-              <td>3.98</td>
-              <td>5.50</td>
-              <td>3.78</td>
-            </tr>
-          </tbody></table>
+  <tr>
+    <th rowspan="2">Models</th>
+    <th rowspan="2">Size</th>
+    <th rowspan="2">Ref.</th>
+    <th rowspan="2">Avg</th>
+    <th colspan="6">Perception \&amp; Understanding.</th>
+    <th colspan="5">Reasoning \&amp; Analysis</th>
+    <th colspan="2">Context</th>
+    <th rowspan="2">Align.</th>
+  </tr>
+  <tr>
+    <th>Des.</th>
+    <th>Rec.</th>
+    <th>Cou.</th>
+    <th>OCR.</th>
+    <th>Mem.</th>
+    <th>Kno.</th>
+    <th>Rea.</th>
+    <th>Cha.</th>
+    <th>Pro.</th>
+    <th>Com.</th>
+    <th>Wri.</th>
+    <th>Coh.</th>
+    <th>Inc.</th>
+  </tr></thead>
+<tbody>
+  <tr>
+    <td>Qwen2-VL</td>
+    <td>72B</td>
+    <td>1</td>
+    <td><b>6.51</b></td>
+    <td>7.39</td>
+    <td><u>6.64</u></td>
+    <td><u>6.64</u></td>
+    <td><b>7.60</b></td>
+    <td>7.09</td>
+    <td><b>6.32</b></td>
+    <td>4.00</td>
+    <td><u>7.16</u></td>
+    <td><b>5.89</b></td>
+    <td><u>6.57</u></td>
+    <td>7.72</td>
+    <td>6.37</td>
+    <td><u>5.26</u></td>
+    <td><b>1.54</b></td>
+  </tr>
+  <tr>
+    <td>Claude</td>
+    <td>-</td>
+    <td>4</td>
+    <td><b>6.51</b></td>
+    <td><u>7.68</u></td>
+    <td><b>6.89</b></td>
+    <td><b>6.79</b></td>
+    <td>7.02</td>
+    <td><u>7.10</u></td>
+    <td><u>6.28</u></td>
+    <td><u>4.06</u></td>
+    <td>7.11</td>
+    <td>5.20</td>
+    <td>5.92</td>
+    <td><b>7.98</b></td>
+    <td><b>7.02</b></td>
+    <td><b>5.52</b></td>
+    <td>1.45</td>
+  </tr>
+  <tr>
+    <td>GPT-4o</td>
+    <td>-</td>
+    <td>2</td>
+    <td><u>6.41</u></td>
+    <td><b>7.75</b></td>
+    <td>6.41</td>
+    <td>5.20</td>
+    <td>7.17</td>
+    <td><b>7.28</b></td>
+    <td>6.16</td>
+    <td><b>4.44</b></td>
+    <td><b>7.23</b></td>
+    <td><u>5.81</u></td>
+    <td><b>7.19</b></td>
+    <td><u>7.85</u></td>
+    <td><u>6.41</u></td>
+    <td>4.43</td>
+    <td>1.18</td>
+  </tr>
+  <tr>
+    <td>CogVLM2</td>
+    <td>19B</td>
+    <td>8</td>
+    <td>5.81</td>
+    <td>7.20</td>
+    <td>6.12</td>
+    <td>5.75</td>
+    <td>7.21</td>
+    <td>6.07</td>
+    <td>5.69</td>
+    <td>3.43</td>
+    <td>5.92</td>
+    <td>4.37</td>
+    <td>5.65</td>
+    <td>7.34</td>
+    <td>6.33</td>
+    <td>4.43</td>
+    <td><u>1.49</u></td>
+  </tr>
+  <tr>
+    <td>InternVL-Chat</td>
+    <td>26B</td>
+    <td>5</td>
+    <td>5.62</td>
+    <td>7.12</td>
+    <td>6.00</td>
+    <td>5.51</td>
+    <td>6.63</td>
+    <td>4.99</td>
+    <td>5.08</td>
+    <td>3.35</td>
+    <td>5.98</td>
+    <td>3.98</td>
+    <td>6.33</td>
+    <td>7.26</td>
+    <td>6.31</td>
+    <td>4.48</td>
+    <td>1.12</td>
+  </tr>
+  <tr>
+    <td>InternVL2</td>
+    <td>76B</td>
+    <td>3</td>
+    <td>5.57</td>
+    <td>6.95</td>
+    <td>5.11</td>
+    <td>5.81</td>
+    <td><u>7.37</u></td>
+    <td>5.96</td>
+    <td>3.61</td>
+    <td>3.83</td>
+    <td>6.48</td>
+    <td>4.66</td>
+    <td>6.05</td>
+    <td>6.05</td>
+    <td>6.30</td>
+    <td>4.23</td>
+    <td>0.93</td>
+  </tr>
+  <tr>
+    <td>MiniCPM</td>
+    <td>8B</td>
+    <td>6</td>
+    <td>5.42</td>
+    <td>7.18</td>
+    <td>5.37</td>
+    <td>5.46</td>
+    <td>6.23</td>
+    <td>4.46</td>
+    <td>5.35</td>
+    <td>3.34</td>
+    <td>4.83</td>
+    <td>3.69</td>
+    <td>5.99</td>
+    <td>7.35</td>
+    <td>6.25</td>
+    <td>4.97</td>
+    <td>1.09</td>
+  </tr>
+  <tr>
+    <td>Qwen-VL-Chat</td>
+    <td>9B</td>
+    <td>12</td>
+    <td>5.13</td>
+    <td>6.43</td>
+    <td>5.87</td>
+    <td>5.40</td>
+    <td>4.80</td>
+    <td>5.11</td>
+    <td>5.58</td>
+    <td>2.98</td>
+    <td>4.10</td>
+    <td>3.12</td>
+    <td>5.51</td>
+    <td>7.19</td>
+    <td>6.07</td>
+    <td>4.50</td>
+    <td>1.01</td>
+  </tr>
+  <tr>
+    <td>InternLM-XC2-VL</td>
+    <td>7B</td>
+    <td>7</td>
+    <td>4.97</td>
+    <td>6.34</td>
+    <td>4.70</td>
+    <td>5.28</td>
+    <td>5.06</td>
+    <td>4.69</td>
+    <td>5.03</td>
+    <td>3.08</td>
+    <td>4.49</td>
+    <td>3.29</td>
+    <td>5.00</td>
+    <td>7.21</td>
+    <td>5.92</td>
+    <td>4.56</td>
+    <td>0.88</td>
+  </tr>
+  <tr>
+    <td>DeepSeek-VL</td>
+    <td>7B</td>
+    <td>11</td>
+    <td>4.70</td>
+    <td>6.53</td>
+    <td>5.52</td>
+    <td>5.10</td>
+    <td>3.98</td>
+    <td>3.87</td>
+    <td>4.19</td>
+    <td>2.50</td>
+    <td>3.96</td>
+    <td>2.58</td>
+    <td>5.46</td>
+    <td>7.15</td>
+    <td>5.83</td>
+    <td>4.47</td>
+    <td>1.02</td>
+  </tr>
+  <tr>
+    <td>Monkey-Chat</td>
+    <td>9B</td>
+    <td>10</td>
+    <td>4.70</td>
+    <td>6.04</td>
+    <td>4.88</td>
+    <td>5.57</td>
+    <td>4.66</td>
+    <td>4.18</td>
+    <td>4.96</td>
+    <td>3.01</td>
+    <td>4.00</td>
+    <td>2.61</td>
+    <td>4.87</td>
+    <td>6.29</td>
+    <td>6.15</td>
+    <td>3.96</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>ShareGPT4V</td>
+    <td>13B</td>
+    <td>14</td>
+    <td>4.39</td>
+    <td>5.93</td>
+    <td>4.61</td>
+    <td>5.16</td>
+    <td>3.77</td>
+    <td>4.04</td>
+    <td>4.58</td>
+    <td>2.45</td>
+    <td>3.73</td>
+    <td>2.19</td>
+    <td>5.05</td>
+    <td>6.39</td>
+    <td>5.36</td>
+    <td>3.79</td>
+    <td>1.08</td>
+  </tr>
+  <tr>
+    <td>LLava-v1.5</td>
+    <td>13B</td>
+    <td>15</td>
+    <td>4.31</td>
+    <td>6.02</td>
+    <td>4.56</td>
+    <td>4.46</td>
+    <td>3.85</td>
+    <td>3.69</td>
+    <td>4.72</td>
+    <td>2.46</td>
+    <td>3.69</td>
+    <td>2.10</td>
+    <td>4.75</td>
+    <td>6.21</td>
+    <td>5.60</td>
+    <td>3.96</td>
+    <td>1.05</td>
+  </tr>
+  <tr>
+    <td>Yi-VL</td>
+    <td>34B</td>
+    <td>13</td>
+    <td>4.25</td>
+    <td>4.79</td>
+    <td>4.78</td>
+    <td>5.19</td>
+    <td>3.33</td>
+    <td>3.58</td>
+    <td>4.47</td>
+    <td>2.42</td>
+    <td>3.25</td>
+    <td>2.08</td>
+    <td>4.72</td>
+    <td>6.61</td>
+    <td>5.87</td>
+    <td>4.13</td>
+    <td>1.20</td>
+  </tr>
+  <tr>
+    <td>Phi-3-Vision</td>
+    <td>4B</td>
+    <td>9</td>
+    <td>4.08</td>
+    <td>4.48</td>
+    <td>3.53</td>
+    <td>4.75</td>
+    <td>4.10</td>
+    <td>3.48</td>
+    <td>3.16</td>
+    <td>2.56</td>
+    <td>4.40</td>
+    <td>2.85</td>
+    <td>4.34</td>
+    <td>5.51</td>
+    <td>5.85</td>
+    <td>4.07</td>
+    <td>0.86</td>
+  </tr>
+  <tr>
+    <td>InstructBLIP</td>
+    <td>9B</td>
+    <td>16</td>
+    <td>3.31</td>
+    <td>4.11</td>
+    <td>4.61</td>
+    <td>4.11</td>
+    <td>2.77</td>
+    <td>3.05</td>
+    <td>2.92</td>
+    <td>1.76</td>
+    <td>2.58</td>
+    <td>1.12</td>
+    <td>3.36</td>
+    <td>3.17</td>
+    <td>5.42</td>
+    <td>4.02</td>
+    <td>1.09</td>
+  </tr>
+  <tr>
+    <td>GPT-4o without image</td>
+    <td>-</td>
+    <td>-</td>
+    <td>2.13</td>
+    <td>1.11</td>
+    <td>1.57</td>
+    <td>1.22</td>
+    <td>1.73</td>
+    <td>1.53</td>
+    <td>1.17</td>
+    <td>1.29</td>
+    <td>2.88</td>
+    <td>1.14</td>
+    <td>1.99</td>
+    <td>3.50</td>
+    <td>5.14</td>
+    <td>3.41</td>
+    <td>-</td>
+  </tr>
+</tbody></table>
           </div>
         </div>
       </div>
